--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "button": "^1.1.1",
     "native": "^0.3.3",
     "react": "^18.3.1",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0"
