--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "button": "^1.1.1",
     "native": "^0.3.3",
     "react": "^18.3.1",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-map": "^0.0.1",
+    "react-native-maps": "^1.15.6",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-webview": "^13.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
